--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.mail.host=email-smtp.us-west-2.amazonaws.com
-spring.mail.username=username
-spring.mail.password=password
+spring.mail.host=smtp.gmail.com
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.port=25
 spring.mail.properties.mail.smtp.auth=true
